compuslink-microservices/k8s/colocation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colocation-service
  namespace: compuslink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colocation-service
  template:
    metadata:
      labels:
        app: colocation-service
    spec:
      containers:
        - name: colocation-service
          image: compuslink/colocation-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: coloc-uploads-volume
              mountPath: /app/uploads
      volumes:
        - name: coloc-uploads-volume
          persistentVolumeClaim:
            claimName: colocation-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: colocation-service
  namespace: compuslink
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: colocation-service
