compuslink-microservices/k8s/event-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: compuslink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: localhost:5000/compuslink-event-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          volumeMounts:
            - name: event-uploads-volume
              mountPath: /app/uploads
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 120
            periodSeconds: 20
            failureThreshold: 3
      volumes:
        - name: event-uploads-volume
          persistentVolumeClaim:
            claimName: event-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: compuslink
spec:
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: event-service
