compuslink-microservices/k8s/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: compuslink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: compuslink/user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: user-uploads-volume
              mountPath: /app/uploads
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 120
            periodSeconds: 20
            failureThreshold: 3
      volumes:
        - name: user-uploads-volume
          persistentVolumeClaim:
            claimName: user-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: compuslink
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: user-service
