compuslink-microservices/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compuslink-ingress
  namespace: compuslink
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Utile pour traiter de gros uploads (fichiers de 10MB+)
    nginx.ingress.kubernetes.io/proxy-body-size: "30m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
